<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="baseURL">https://mlite-demo.musoni.eu:8443/</string>
    <string name="action_settings">Settings</string>
    <string name="reg">Registration</string>
    <string name="businessInfo">Business Information</string>
    <string name="applyLoan">Apply for Loan</string>
    <string name="clientInfo">Client Information</string>
    <string name="personalInfo">Personal Information</string>
    <string name="clientID">Client Identification</string>
    <string name="busDetails">Business Details</string>
    <string name="certify">Certification</string>
    <string name="nextKin">Next of Kin</string>
    <string name="appName"> </string>
    <string name="submit">Submit</string>
    <string name="hello_world">Hello World!</string>
	<string name="groupReg">Group Request</string>
	<string name="clientReg">Client Registration</string>
	<string name="groupInfo">Group Information</string>
	<string name="groupMembers">Group Members</string>
	<string name="groupName">Group Name</string>
	<string name="branchName">Branch Name</string>
	<string name="loanOfficer">Loan Officer</string>
	<string name="regNum">Registration Number</string>
	<string name="meetingLoc">Meeting Location</string>
	<string name="meetingDay">Meeting Day</string>
	<string name="meetingFreq">Meeting Frequency</string>
</resources>