<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="1" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_column="0"
            android:layout_gravity="right|center_vertical"
            android:layout_row="0"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonClientInf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:text="@string/clientInfo" />

            <Button
                android:id="@+id/buttonPersInf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/personalInfo" />

            <Button
                android:id="@+id/buttonClientID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:text="@string/clientID" />

            <Button
                android:id="@+id/buttonBusDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/busDetails" />

            <Button
                android:id="@+id/buttonNextKin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nextKin" />
            
            <Button
                android:id="@+id/buttonCertify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/certify" />

        </LinearLayout>
    </ScrollView>

</GridLayout>