<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/submit" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_above="@+id/buttonSubmit"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonGroupInf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:text="@string/groupInfo"
            android:onClick="onClickGroupInfo"
             />

        <Button
            android:id="@+id/buttonPersInf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/groupMembers"
            android:onClick="onClickGroupMembers" />

        <Button
            android:id="@+id/buttonCertify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/certify" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="121dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupName" />

            <EditText
                android:id="@+id/editTextGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewBranchName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branchName" />

            <EditText
                android:id="@+id/editTextBranchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewLoanOfficer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loanOfficer" />

            <EditText
                android:id="@+id/editTextLoanOfficer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewRegNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regNum" />

            <EditText
                android:id="@+id/editTextRegNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewMeetingLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meetingLoc" />

            <EditText
                android:id="@+id/editTextMeetingLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewMeetingDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meetingDay" />

            <EditText
                android:id="@+id/editTextMeetingDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewMeetingFreq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meetingFreq" />

            <EditText
                android:id="@+id/editTextMeetingFreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>