<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/reg"
        android:onClick="" />

    <Button
        android:id="@+id/buttonInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonReg"
        android:layout_centerVertical="true"
        android:text="@string/businessInfo" />

    <Button
        android:id="@+id/buttonLoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonInfo"
        android:layout_below="@+id/buttonInfo"
        android:layout_marginTop="18dp"
        android:text="@string/applyLoan" />

</RelativeLayout>
